Fixed scrollbar

--- a/src/Moryx.Maintenance.Web/src/common/scss/maintenance.scss
+++ b/src/Moryx.Maintenance.Web/src/common/scss/maintenance.scss
@@ -170,11 +170,8 @@ svg.icon-red {
  * Content Panel
  */
 .maintenance-app-container {
-  height: 100vh;
-  overflow: auto;
   display: flex;
   flex-direction: column;
-  margin-top: 20px !important;
 }
 
 .maintenance-content {
